--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-camera": "^1.1.4",
+    "react-native-sqlite-storage": "^3.3.6",
     "react-navigation": "^2.7.0"
   },
   "devDependencies": {
