--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-camera": "^1.1.4",
+    "react-native-elements": "^0.19.1",
     "react-native-sqlite-storage": "^3.3.6",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.7.0"
   },
   "devDependencies": {
